--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,16 +2,17 @@
 <resources>
     <string name="app_name">DroidControl</string>
 
-    <!--  BluetoothChat -->
-    <string name="send">Send</string>
+    <!--  DroidControl -->
     <string name="not_connected">You are not connected to a device</string>
     <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
-    <string name="title_connecting">connecting...</string>
+    <string name="title_connecting">connecting&#8230;</string>
     <string name="title_connected_to">connected: </string>
     <string name="title_not_connected">not connected</string>
-
+    <string name="led1">LED1</string>
+    <string name="led2">LED2</string>
+    
     <!--  DeviceListActivity -->
-    <string name="scanning">scanning for devices...</string>
+    <string name="scanning">scanning for devices&#8230;</string>
     <string name="select_device">select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
@@ -21,6 +22,5 @@
 
     <!-- Options Menu -->
     <string name="connect">Connect device</string>
-    <string name="discoverable">Make discoverable</string>
     <string name="disconnect">Disconnect devide</string>
 </resources>
